Adding sound and keyboard player

--- a/Projects/worms/java_project/pom.xml
+++ b/Projects/worms/java_project/pom.xml
@@ -46,11 +46,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-        <!-- <dependency>
+        <dependency>
             <groupId>javazoom</groupId>
             <artifactId>jlayer</artifactId>
             <version>1.0.1</version>
-        </dependency> -->
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
