--- a/Projects/worms/java_project/src/resources/app.config
+++ b/Projects/worms/java_project/src/resources/app.config
@@ -3,5 +3,5 @@ app.clock_delay=50
 app.worms.turn_delay=15
 app.random_seed=null
 app.script_file=my_game.xml
-app.record_game=true
+app.record_game=false
 app.play_record=false
